# S2-L10

./: .gitignore  CMakeLists.txt  S2-L10.cpp
inc/: bmp.hpp  matrix.hpp
src/: bmp.cpp
